issue-3 - Swagger and Subscription support
- swagger -include api-key
- support for subscriptions
- new topic to receive messages on the transaction.created event
